--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "husky": {
     "hooks": {
-      "post-commit": "git push origin master"
+      "pre-commit": "git push origin master"
     }
   }
 }
